After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598383 - GtkWidget::state-changed signal should be documented
GtkWidget::state-changed signal should be documented
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.18.x
Other Linux
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-10-14 09:47 UTC by Guillaume Desmottes
Modified: 2010-01-11 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Document that state is the previous state (408 bytes, patch)
2010-01-05 11:57 UTC, Christian Dywan
committed Details | Review

Description Guillaume Desmottes 2009-10-14 09:47:57 UTC
The state argument of the "state-changed" signal is actually the *old* state. This should be documented as it's not intuitive.
Comment 1 Christian Dywan 2010-01-05 11:57:09 UTC
Created attachment 150833 [details] [review]
Document that state is the previous state
Comment 2 Guillaume Desmottes 2010-01-05 12:10:16 UTC
Why not rename @state to @old_state or @previous_state?
Comment 3 Christian Dywan 2010-01-05 12:18:41 UTC
Because argument names are part of the ABI in some programming languages.
Comment 4 Matthias Clasen 2010-01-07 06:25:44 UTC
Comment on attachment 150833 [details] [review]
Document that state is the previous state

looks fine, but while you are at it, why not add a body to that doc comment, like "This signal is emitted when the widget state changes. See gtk_widget_get_state()."
Comment 5 Christian Dywan 2010-01-11 09:32:30 UTC
Pushed to master.