Document GtkWidget::state-changed signal properly

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=598383